--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,27 +1,108 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Mydiary</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-  <div id="user_nav">
-    <% if current_user %>
-    Logged in as <%= current_user.email %>.
-    <%= link_to "Log out", log_out_path %>
-    <% else %>
-    <%= link_to "Sign up", sign_up_path %> or
-    <%= link_to "log in", log_in_path %>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head profile="http://gmpg.org/xfn/11">
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <link rel="Shortcut Icon" href="/assets/favicon.ico" />
+    <title><%= APP_CONFIG[:description] %></title>
+    <meta name="generator" content="My Diary" /> <!-- leave this for stats -->
+    <%= stylesheet_link_tag "application", :media => "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
+    <div id="user_nav">
+      <% if current_user %>
+      Logged in as <%= current_user.email %>.
+      <%= link_to "Log out", log_out_path %>
+      <% end %>
+    </div>
+    <% flash.each do |name, msg| %>
+    <%= content_tag :div, msg, :id => "flash_#{name}" %>
     <% end %>
-  </div>
-  
-  <% flash.each do |name, msg| %>
-  <%= content_tag :div, msg, :id => "flash_#{name}" %>
-  <% end %>
-  
-<%= yield %>
 
-</body>
+    <div class="container">
+      <div>
+	<div class="header">
+          <img src="/assets/magesh-resized.jpg"></img>
+          <img src="/assets/logo.jpg"></img>
+          <div>
+            <div class="imenu">
+              <b><a href="/">Home</a> | <a href="/about-me">About Me</a> | <a href="/projects">Projects</a> | <a href="/category/regular">My Diary</a> | <a href="/category/video">Video</a> | Contact Me</b>
+            </div>
+            <div class="status">
+              <span><a href="#" title="View Recent" ><strong> Status </strong><small class="fey"> &#187;</small></a></span> <?php if (function_exists('get_twitter_msg')){ get_twitter_msg(); } ?><?php if (function_exists('statuspress')) { echo statuspress('yourfacebookfeedhere', '', 1); } ?></div>
+
+	  </div>
+          <div class="search">
+            <form method="get" id="sform" action="<?php bloginfo('home'); ?>/">
+              <p> <input type="text" id="q" value="" name="s" size="15" /></p>
+	    </form>
+          </div>
+          
+          <%= yield %>
+
+          <div class="lastfm">
+            <!-- <br/>
+
+                 <a href="#" title="Find out my musical tastes" ><strong> Sounds I Like </strong><small class="fey"> &#187;  </small></a>
+
+                 <?php
+                    if (function_exists('lastfmrecords_display'))
+                    {
+                    lastfmrecords_display();
+                    }
+
+                    ?> -->
+            <h3>Tag Cloud</h3>
+            <div>
+              magesh, raghu, yogesh
+            </div>
+            <br />
+          </div>
+
+
+
+          <div class="footer">
+	    
+	    <div>
+    	      <p><strong>About Me</strong></p>
+              <p>Im Magesh, Chennai based Web-Developer, Linux user, Social Media Enthusiast and..<a href="<?php bloginfo('url'); ?>/about-me/" title="Bored of me yet?"><b>More &#187;</b></a></p>
+	    </div>
+	    
+	    <div style="background:#FFF;padding:0px;color:#fff;border:none">
+
+              <br/>
+              <br/>
+              <!-- <a href="#" title="My Social Network" style="background:#FFF;padding:0px;color:#fff;border:none" ><img src="/wp-content/themes/tj-clean/images/facebook.gif" alt="Social Network profile" /></a>	-->
+
+
+            </div>
+            <div>
+              <p><strong>I Support</strong></p>
+
+              The Sapling Project
+            </div>
+	    <div class="last">
+	      
+              <br/>
+              <br/>
+              <!-- <a href="<?php bloginfo('rss2_url'); ?>" title="RSS - Subscribe..you know you want to" style="background:#FFF;padding:0px;color:#fff;border:none" ><img src="/wp-content/themes/tj-clean/images/feed.gif" alt="RSS Subscribe..you know you want to" /></a> -->
+	      
+	      
+	    </div>
+	  </div><!-- end footer -->
+
+          <br />
+          <br />
+          <br />
+          
+	  <div class="copyright">
+            
+            <p>&copy; <%= APP_CONFIG[:sitename] %>. Powered by <a href="/about-me" title="Magesh">Magesh</a> <!-- <br />Valid <a href="http://validator.w3.org/check?uri=referer" title="Believe it or not, but my code is correct!" >XHTML</a> | <a href="http://jigsaw.w3.org/css-validator/check/referer" title="Some CSS love" >CSS</a> | <a href="http://validator.w3.org/feed/check.cgi?url=<?php bloginfo('rss2_url'); ?>" title="That feed you should be reading is all good" >RSS</a> - <a href="<?php bloginfo('url'); ?>/sitemap/" title="Site Map">Site Map</a> - --></p> 
+          
+	  </div>       
+        </div>
+    </div> </div> <!-- end container -->
+  </body>
 </html>
