--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,4 +1,4 @@
-/*   
+/*
 Theme Name: TJ Clean
 Theme URI: http://theojones.net/tj-clean-wordpress-theme
 Description: Clean-cut, single column theme thats valid XHTML & CSS with integration of Flickr, Last.FM, AddThis and Twitter/Facebook. Inspired by Derek Powazek's Depo Clean.
@@ -6,7 +6,7 @@ Author: Theo Jones
 Author URI: http://theojones.net
 Version: 1.0
 .
-Creative Commons - Attribution-Noncommercial-Share Alike 3.0 
+Creative Commons - Attribution-Noncommercial-Share Alike 3.0
 http://creativecommons.org/licenses/by-nc-sa/3.0/
 */
 
@@ -18,9 +18,9 @@ body {
 background : #fff;
 color : #000;
 text-align : center;
-font-size : 14px;
-line-height : 18px;
-font-family : "Lucida Grande", Verdana, Arial, sans-serif;
+font-size : 18px;
+line-height : 1.4
+font-family : Verdana, Arial, sans-serif;
 }
 a {
 text-decoration : none;
@@ -33,7 +33,7 @@ border : none;
 }
 p, ul, ol, li {
 margin-bottom : 18px;
-font-family:monospace;
+font-family:Verdana, Arial, sans-serif;
 }
 blockquote {
 margin : 0 18px 18px;
@@ -57,8 +57,8 @@ line-height : 36px;
 margin-bottom : 18px;
 }
 h3 {
-font-size : 18px;
-line-height : 18px;
+font-size : 30px;
+line-height : 1.2;
 margin-bottom : 20px;
 }
 .container {
@@ -161,7 +161,7 @@ border : 1px solid #ccc;
 padding : 0 4px;
 }
 
-#content { 
+#content {
 height:200px;
  }
 
@@ -185,7 +185,7 @@ font-size : 12px;
 .previously a, .contentpage a, .content a {
 font-weight : 700;
 color:darkred;
-font-family:monospace;
+font-family:Verdana;
 }
 .text_area {
 width : 480px !important ;
@@ -282,5 +282,5 @@ img:hover{
 color:none;
 }
 .imenu{
-font-family:monospace;
+font-family:Verdana;
 }
