--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -11,25 +11,33 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :user_id %><br />
-    <%= f.select :user_id, @users.collect{ |u| [u.first_name, u.id] } %>
-  </div>
+  <!--<div class="field">
+    <%#= f.label :user_id %><br />
+    <%#= f.select :user_id, @users.collect{ |u| [u.first_name, u.id] } %>
+  </div>-->
   <div class="field">
     <%= f.label :date %><br />
     <%= f.datetime_select :date %>
-  </div>
-  <div class="field">
-    <%= f.label :content %><br />
-    <%= f.text_area :content %>
   </div>
   <div class="field">
     <%= f.label :title %><br />
     <%= f.text_field :title %>
   </div>
   <div class="field">
+    <%= f.label :permalink %><br />
+    <%= f.text_field :permalink %>
+  </div>
+  <div class="field">
+    <%= f.label :content %><br />
+    <%= f.text_area :content, :cols => "80" %>
+  </div>
+  <div class="field">
     <%= f.label :status %><br />
-    <%= f.select :status, ["draft", "published"] %>
+    <%= f.select :status, ["draft", "publish"] %>
+  </div>
+  <div class="field">
+    <%= f.label :post_type %><br />
+    <%= f.select :post_type, ["post", "link", "quote","photo", "diary"] %>
   </div>
   <div class="actions">
     <%= f.submit %>
