--- a/app/views/page/diary.html.erb
+++ b/app/views/page/diary.html.erb
@@ -11,14 +11,7 @@
       <span class="edit"><a href="/admin/posts/<%= post.id %>/edit">Edit</a></span>
       <% end %>
     </h3>
-    <% if post.excerpt && !post.excerpt.blank? && !post.excerpt.nil? %>
-    <%= markdown_html(post.excerpt).html_safe %>
-    <% else %>
-    <% excerpt = markdown_html(post.content).html_safe %>
-    <% final = truncate(excerpt, :length => 360, :omission => '.. (continued)') %>
-    <%= Hpricot(final).to_s.html_safe %>
-
-    <% end %>
+    <%= truncate(post.content, :length => 360, :omission => ' .. (continued)') %>
     <p><span style="font-size:10px;color:#666;padding:3px 0;"><?php the_tags(); ?></span></p>
     <br />
   </div>
