--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,15 +1,3 @@
-/*
-Theme Name: TJ Clean
-Theme URI: http://theojones.net/tj-clean-wordpress-theme
-Description: Clean-cut, single column theme thats valid XHTML & CSS with integration of Flickr, Last.FM, AddThis and Twitter/Facebook. Inspired by Derek Powazek's Depo Clean.
-Author: Theo Jones
-Author URI: http://theojones.net
-Version: 1.0
-.
-Creative Commons - Attribution-Noncommercial-Share Alike 3.0
-http://creativecommons.org/licenses/by-nc-sa/3.0/
-*/
-
 * {
 margin : 0;
 padding : 0;
@@ -18,8 +6,8 @@ body {
 background : #fff;
 color : #000;
 text-align : center;
-font-size : 18px;
-line-height : 1.4
+font-size : 16px;
+line-height : 20px;
 font-family : Verdana, Arial, sans-serif;
 }
 a {
