added more links photos, links, quotes and etc

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
           <img src="/assets/logo.jpg"></img>
           <div>
             <div class="imenu">
-              <b><a href="/">Home</a> | <a href="/about-me">About Me</a> | <a href="/projects">Projects</a> | <a href="/videos">Video</a> | Contact Me</b>
+              <b><a href="/">Home</a> | <a href="/about-me">About Me</a> | <a href="/photos">Photos</a> | <a href="/videos">Videos</a> | <a href="/links">Links</a> | <a href="/quotes">Quotes</a> | Contact Me</b>
             </div>
             <div class="status">
               <span><a href="#" title="View Recent" ><strong> Status </strong><small class="fey"> &#187;</small></a></span> <?php if (function_exists('get_twitter_msg')){ get_twitter_msg(); } ?><?php if (function_exists('statuspress')) { echo statuspress('yourfacebookfeedhere', '', 1); } ?></div>
