--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -272,3 +272,11 @@ color:none;
 .imenu{
 font-family:Verdana;
 }
+
+#tag_cloud {
+    /* width: 400px; */
+    line-height: 1.6em;
+}
+#tag_cloud .s { font-size: 0.8em; }
+#tag_cloud .m { font-size: 1.2em; }
+#tag_cloud .l { font-size: 1.8em; }
