--- a/app/views/admin/posts/_form.html.erb
+++ b/app/views/admin/posts/_form.html.erb
@@ -39,6 +39,10 @@
     <%= f.label :post_type %><br />
     <%= f.select :post_type, ["post", "link", "quote","photo", "diary"] %>
   </div>
+  <div class="field">
+    <%= f.label :tag_list, "Tags (separated by commas)" %><br />
+    <%= f.text_field :tag_list %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
