--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -280,3 +280,7 @@ font-family:Verdana;
 #tag_cloud .s { font-size: 0.8em; }
 #tag_cloud .m { font-size: 1.2em; }
 #tag_cloud .l { font-size: 1.8em; }
+
+.pagination {
+    font-size: 14px;
+}
